2007-12-03  Lluis Sanchez Gual <lluis@novell.com> 

	* SystemInfoExtension/Makefile.am: Added missing files.

2007-12-03  Lluis Sanchez Gual <lluis@novell.com> 

	* UnitTests/UnitTests.mdp, UnitTests/TestLoadUnload.cs,
	  UnitTests/IWriter.cs, UnitTests/TestLocalization.cs,
	  UnitTests/Makefile.am, UnitTests/TestBase.cs,
	  FileContentExtension/FileContentExtensionNode.cs,
	  FileContentExtension/FileContentExtension.addin.xml,
	  HelloWorldExtension/HelloWorldWriter.cs,
	  CommandExtension/CommandExtensionNode.cs,
	  SystemInfoExtension/SystemInfoWriter.cs,
	  SystemInfoExtension/Makefile.am,
	  SystemInfoExtension/SystemInfoExtension.addin.xml,
	  SystemInfoExtension/Resources.resx,
	  SystemInfoExtension/ModuleExtensionNode.cs,
	  SystemInfoExtension/SystemInfoExtension.mdp,
	  SystemInfoExtension/Resources.ca.resx,
	  FileExtender/ExtraExtender.addin.xml: Added localization tests.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* CommandExtension/CommandExtension.mdp,
	  FileContentExtension/FileContentExtension.mdp,
	  FileExtender/FileExtender.mdp,
	  HelloWorldExtension/HelloWorldExtension.mdp,
	  SystemInfoExtension/SystemInfoExtension.mdp, Test.mds,
	  UnitTests/UnitTests.mdp: Update paths.

2007-07-06  Lluis Sanchez Gual <lluis@novell.com> 

	* UnitTests/TestEvents.cs,
	  SystemInfoExtension/SystemInfoExtension.addin.xml: Minor fixes.
	* Makefile.am: Added new test target.

2007-07-05  Lluis Sanchez Gual <lluis@novell.com> 

	* UnitTests/UnitTests.mdp, UnitTests/Makefile.am,
	  FileContentExtension/FileContentExtension.mdp,
	  HelloWorldExtension/HelloWorldExtension.mdp,
	  CommandExtension/CommandExtension.mdp,
	  SystemInfoExtension/SystemInfoExtension.mdp,
	  FileExtender/FileExtender.mdp: More project file fixes.

2007-04-23  Lluis Sanchez Gual <lluis@novell.com> 

	* UnitTests/UnitTests.mdp, UnitTests/Makefile.am,
	  FileContentExtension/FileContentExtension.mdp,
	  FileContentExtension/Makefile.am,