@@ -1,3 +1,9 @@
+2007-12-05  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* UnitTests/UnitTests.mdp, UnitTests/Makefile.am,
+	  SystemInfoExtension/Makefile.am: Flush.
+	* UnitTests/AddinInformationTests.cs: Added tests for Addin.CompareVersion.
+
 2007-12-03  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* SystemInfoExtension/Makefile.am: Added missing files.
